--- a/Dockerfile.producer
+++ b/Dockerfile.producer
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN make build-consumer
+RUN make build-producer
 
 # --------------------------------
 
