--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,12 +3,7 @@ name: Test & Build
 on: push
 
 jobs:
-  setup-go:
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.23'
-
+  # Linting step
   lint:
     name: Run Lint
     runs-on: ubuntu-latest
@@ -16,19 +11,25 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: golangci-lint
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.23'
+
+      - name: Install golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.60.3
           install-mode: goinstall
-          args: --timeout=10m
 
       - name: Run Lint
         run: make lint
 
+  # Testing step
   tests:
     name: Run Tests
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -41,9 +42,11 @@ jobs:
       - name: Run Tests
         run: make test
 
+  # Build step
   build:
     name: Run Build
     runs-on: ubuntu-latest
+    needs: tests
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
