--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Output of the go prof tool
+*.prof
+*.pprof
+
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
