--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,7 +1,7 @@
 # my global config
 global:
-  scrape_interval:     15s # By default, scrape targets every 15 seconds.
-  evaluation_interval: 15s # By default, scrape targets every 15 seconds.
+  scrape_interval:     1s # By default, scrape targets every 15 seconds.
+  evaluation_interval: 1s # By default, scrape targets every 15 seconds.
   # scrape_timeout is set to the global default (10s).
 
   # Attach these labels to any time series or alerts when communicating with
@@ -29,9 +29,12 @@ scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
 
   - job_name: 'producer'
-
     # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 15s
-
+    scrape_interval: 1s
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['host.docker.internal:3001']
+  - job_name: 'consumer'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 1s
+    static_configs:
+      - targets: [ 'host.docker.internal:3002' ]
